<resources>
    <string name="app_name">SmartLabelling</string>
    <string name="help_txt">Help</string>
    <string name="policy">Privacy Policy</string>
    <string name="app_info">App Info</string>
    <string name="btn_scan">Сканировать</string>
    <string name="sample_txt">Sample Text</string>

    //register\login fragment
    <string name="txt_login_fr">ВХОД</string>
    <string name="txt_register_fr">РЕГИСТРАЦИЯ</string>
    <string name="txt_layout_email">Почтовый адрес</string>
    <string name="txt_email_edit_text">Пароль</string>
    <string name="txt_forgot_password">Забыли пароль?</string>
    <string name="btn_login">Войти</string>
    <string name="txt_or">или</string>
    <string name="txt_company_name_edit_text">Название компании</string>
    <string name="btn_sign_up">Зарегистрироваться</string>
    <string name="dialog_product_name_hint">Название продукта</string>
    <string name="btn_login_with_google">Войти через Google</string>
    <string name="edit_product_name">Название продукта</string>
    <string name="edit_product_type">Тип продукта</string>
    <string name="edit_production_date">Дата производства</string>
    <string name="edit_product_photo">Загрузите фото продукта</string>
    <string name="edit_product_series_number">Серия продукта</string>
    <string name="edit_product_restrictions">Не рекомендуется:</string>
    <string name="edit_product_nutrition">Энергетическая ценность продукта: </string>
    <string name="edit_fats">Жиры</string>
    <string name="edit_carbs">Углеводы</string>
    <string name="btn_addNewCard">Создать карточку</string>
    <string name="edit_protein">Белки</string>
    <string name="edit_product_ingredients">Состав продукта</string>
    <string name="edit_product_size">Вес/ Объем (гр/мл)</string>
    <string name="edit_product_expiry_date">Срок годности</string>
    <string name="btn_save_changes">Сохранить изменения</string>
    <string name="edit_product_manifactured_country">Страна производитель</string>
    <string name="txt_about_app">  Приложение получения всей необходимой информации о продукте в электронном виде для дальнейшего уменьшения ипользования краски, бумаги и пластика на упаковке товаров. Посредством сканирования QR-кода на самом продукте потребитель получает информацию о продукте (дата произ-ва, состав продукта, предосторожности при употреблении(детям, беременным, аллергетикам итд. ),  nutrition declaration, страна производства).</string>
    <string name="txt_privacy_policy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
</resources>