<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.smartlabelling.presentation.presentation.ui.fragments.producer.producer_sign_up.ProducerSignUpFragment">

    <com.google.android.material.button.MaterialButton
        app:rippleColor="@color/violet"
        android:id="@+id/btn_enter_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Transparent"
        android:text="@string/txt_register_fr"
        android:layout_gravity="center|right"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="230dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="80dp"
        style="?android:attr/borderlessButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_enter_login"
        app:rippleColor="@color/violet"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|left"
        android:layout_marginTop="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="230dp"
        android:backgroundTint="@color/Transparent"
        android:text="@string/txt_login_fr"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        android:layout_gravity="top"
        android:layout_marginTop="260dp"
        android:hint="@string/txt_company_name_edit_text"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/company_name_edit_text"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/white"
            android:inputType="text"
            android:maxLength="13"
            android:textColor="@color/grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        android:layout_gravity="center"
        android:hint="@string/txt_layout_email"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_txt_email_register"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/white"
            android:layout_marginBottom="20dp"
            android:maxLength="13"
            android:textColor="@color/grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:hint="@string/txt_email_edit_text"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_txt_password_register"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:inputType="textPassword"
            android:maxLength="13"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        style="@style/ThemeOverlay.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/black"
        android:padding="25dp"
        android:insetBottom="0dp"
        app:cornerRadius="0dp"
        android:text="@string/btn_sign_up"
        android:textColor="@color/white"
        android:textSize="18sp" />

</FrameLayout>
