<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.presentation.ui.fragments.producer.add.AddNewProductCardFragment">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/product_data_loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="@color/purple_200" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/product_image"
            android:layout_width="197dp"
            android:layout_height="182dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="70dp"
            android:hint="@string/edit_product_name"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_product_name"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/white"
                android:inputType="text"
                android:maxLength="13"
                android:textColor="@color/grey" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_product_type"
            android:layout_marginTop="120dp"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_product_type"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="text"
                android:maxLength="13"
                android:textColor="@color/grey" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="160dp"
            android:hint="@string/edit_product_ingredients"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_product_ingredients"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="text"
                android:maxLength="20"
                android:textColor="@color/grey" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="115dp"
            android:hint="@string/edit_product_size"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_product_size"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="number"
                android:maxLength="13"
                android:textColor="@color/grey" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="70dp"
            android:hint="@string/edit_production_date"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_production_date"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="text"
                android:maxLength="13"
                android:textColor="@color/grey" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:hint="@string/edit_product_expiry_date"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_expiry_date"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="date"
                android:maxLength="13"
                android:textColor="@color/grey" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_nutrition_declaration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/edit_product_nutrition"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:hint="@string/edit_fats"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_fats"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="number"
                android:maxLength="13"
                android:textColor="@color/grey" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="110dp"
            android:hint="@string/edit_carbs"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_carbs"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="number"
                android:maxLength="13"
                android:textColor="@color/grey" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="175dp"
            android:hint="@string/edit_protein"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_proteins"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="text"
                android:maxLength="13"
                android:textColor="@color/grey" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="120dp"
            android:hint="@string/edit_product_manifactured_country"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_country_produced_in"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="text"
                android:maxLength="13"
                android:textColor="@color/grey" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="70dp"
            android:hint="@string/edit_product_restrictions"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_consumption_restrictions"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="text"
                android:maxLength="13"
                android:textColor="@color/grey" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save_changes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/black"
            android:clickable="true"
            android:focusable="true"
            android:padding="20dp"
            android:text="@string/btn_addNewCard"
            android:textColor="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>