<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.smartlabelling.presentation.presentation.ui.fragments.producer.producer_sign_in.ProducerSignInFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_enter_register"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:backgroundTint="@color/Transparent"
        android:text="@string/txt_register_fr"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/violet" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_enter_login"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="172dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Transparent"
        android:text="@string/txt_login_fr"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/violet"
        tools:layout_editor_absoluteY="172dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/company_name_layout"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_company_name_edit_text"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_enter_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_txt_company_name"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:inputType="text"
            android:maxLength="13"
            android:textColor="@color/grey"
            tools:layout_editor_absoluteX="15dp"
            tools:layout_editor_absoluteY="274dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_layout_email"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/company_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_txt_email_login"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:inputType="text"
            android:maxLength="13"
            android:textColor="@color/grey"
            tools:layout_editor_absoluteX="15dp"
            tools:layout_editor_absoluteY="355dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_email_edit_text"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_txt_password_login"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:inputType="text"
            android:maxLength="13"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="15dp"
            tools:layout_editor_absoluteY="423dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/ThemeOverlay.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:insetBottom="0dp"
        android:padding="25dp"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>